--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
+MONGO_URI=mongodb+srv://luishernandezes:admin123@cluster0.ctfxg1l.mongodb.net/blog-app?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-MONGODB_URI=mongodb+srv://luishernandezes:admin123@cluster0.ctfxg1l.mongodb.net/blog-app?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=claveultrasecreta123
